first inroads - figured out how to load data although some messages incomplete

--- a/network_test.ipynb
+++ b/network_test.ipynb
@@ -2,6 +2,729 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import re\n",
+    "import csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "qq = \"2016-11-02 09:38:53, 76941, 72045, 18.35, Hi Megan, I wanted to make sure this is you. Before I paid you for the sweat 👕 \""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "rr = qq.split(', ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi MeganI wanted to make sure this is you. Before I paid you for the sweat 👕 \n"
+     ]
+    }
+   ],
+   "source": [
+    "ss = \"\"\n",
+    "\n",
+    "for r in rr[4:]:\n",
+    "    ss+=r \n",
+    "    \n",
+    "print(ss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "input_dir = 'paymo_input/'\n",
+    "batch_file = 'batch_payment.csv'\n",
+    "stream_file = 'stream_payment.csv'\n",
+    "batch_path = input_dir + batch_file\n",
+    "stream_path = input_dir + stream_file\n",
+    "\n",
+    "test_file = 'batch_test_2.csv'\n",
+    "test_path = input_dir + test_file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 🦄 \n",
+      " Pitcher \n",
+      " 🚕 \n",
+      " For your wife. \n",
+      " 🍺🍺🍺🏌🏌🏌 \n",
+      " 🚗🌃 \n",
+      " Best hair stylist on the west coast... And rent \n",
+      " Juice \n",
+      " Milk \n",
+      " ✨ \n",
+      " Zombies \n",
+      " 💋💋💋 \n",
+      " 🌚🌚🌚🌚 \n",
+      " Debauchery in the form of adulting \n",
+      " Garlic rosemary challah \n",
+      " 🚕 \n",
+      " 🍗 \n",
+      " Delish \n",
+      " Exterminating \n",
+      " 🚕 \n",
+      " 🚕 💸 \n",
+      " 🎂🎉 \n",
+      " Turkey bacon avacadoooooo \n",
+      " 🐱Disappoint plushie \n",
+      " 😈 \n",
+      " Mid-afternoon burger \n",
+      " Mimosas!!! Yaaassss queen!! 🍾 \n",
+      " Fappiano🍾 \n",
+      " 🐶 \n",
+      " . \n",
+      " Cover \n",
+      " Drank at Josh Ritter whom I ❤ \n",
+      " Slow service \n",
+      " 🍕 \n",
+      " GOODS \n",
+      " Drink \n",
+      " For our nightlights \n",
+      " 🍦 \n",
+      " Because you made waffles. \n",
+      " 🚙 \n",
+      " 🍟 \n",
+      " Lisp \n",
+      " 🐚. \n",
+      " 🌴🌴 \n",
+      " Beaaaaan \n",
+      " Tip \n",
+      " Alc \n",
+      " 🍻 \n",
+      " Venmo \n",
+      " Whip whip \n",
+      " Lylas \n",
+      " 😘❤️🍻 \n",
+      " Polish adventures? \n",
+      " Thank you !! \n",
+      " 💵🔙  refund cuz movie is in Westwood! \n",
+      " There is no potsticksr emoji 😕 \n",
+      " Wheel chair \n",
+      " Nashlorette \n",
+      " 2 washes 🚘🚿 \n",
+      " 🌚 \n",
+      " Bus to logroño and burgos \n",
+      " Keep yo 💰 \n",
+      " Davison ball \n",
+      " 🍆 \n",
+      " 🚕 \n",
+      " Broadway \n",
+      " New bus \n",
+      " Midgets \n",
+      " Drinks \n",
+      " 🍳 \n",
+      " ☕️🍔 \n",
+      " 🔥 \n",
+      " For the wifey \n",
+      " All of King Midas' silver \n",
+      " Hustlin 💁🏾 \n",
+      " Salad tossing lessons \n",
+      " Das bier \n",
+      " Uber input \n",
+      " How big were the balls? \n",
+      " Tequilllllllllaaaaaaa \n",
+      " Hookah 🍸 \n",
+      " Laundry \n",
+      " Jamey pt.1 \n",
+      " for 🍴 \n",
+      " Cats \n",
+      " Bets \n",
+      " Cages \n",
+      " Ice cream \n",
+      " 🅿 \n",
+      " I went on toro 🎢 \n",
+      " Lockn 😛 \n",
+      " Security deposit \n",
+      " 🌴🌴COACHELLA🌴🌴 \n",
+      " 🍕🍕🍕 \n",
+      " Kidney stones \n",
+      " 🍕 \n",
+      " food \n",
+      " LED Light bulbs \n",
+      " For date with Ali \n",
+      " Pedágio 🚧 \n",
+      " A special kind of counting disability. 💸➕4️⃣0️⃣⁉️ \n",
+      " Pecannnnnnnnn \n",
+      " 🍸 \n",
+      " @drizydrisk @Michael-Kucharczyk \n",
+      " Tips \n",
+      " 🎁 \n",
+      " PF \n",
+      " ⛽ \n",
+      " ☕️+🍴 \n",
+      " Drunk Babuskas are what we are!! \n",
+      " Rarebit 🍸 \n",
+      " Accidents happen \n",
+      " Fireworx \n",
+      " 🍞🍳🍽 \n",
+      " Bob ruined our wall \n",
+      " 🍴 \n",
+      " Being a good friend \n",
+      " Gowes🚴 \n",
+      " Watermelon goodness \n",
+      " 🎫 \n",
+      " Parking \n",
+      " Bagel \n",
+      " 🐓 \n",
+      " 🌎 \n",
+      " ## \n",
+      " Golf \n",
+      " t-hoes \n",
+      " Bach \n",
+      " for gas bill \n",
+      " for life \n",
+      " Nacho Hippo \n",
+      " 🙃 \n",
+      " Moo moo \n",
+      " :) \n",
+      " Spa day \n",
+      " Go Broncos \n",
+      " 🐼🐼🐼 \n",
+      " 👜 \n",
+      " 🍗 \n",
+      " 🍀☘🍃🍀☘🌳🌲🎄🌵🍃 \n",
+      " For you \n",
+      " 🐷 \n",
+      " Saturday concert \n",
+      " Phone bill \n",
+      " yay! \n",
+      " 💸🚙😟 \n",
+      " Blue eyes white 🐉 \n",
+      " ⛳ \n",
+      " Vodka \n",
+      " Memories 😢 \n",
+      " Alicias \n",
+      " Bite me \n",
+      " Kevin's a 🐍 \n",
+      " 🍇🍞 \n",
+      " Date night! \n",
+      " Cola \n",
+      " Watching the boys ❤️ \n",
+      " ✌🏼️😵👬 \n",
+      " Target \n",
+      " Ethiopian Food \n",
+      " Westside \n",
+      " Tacos \n",
+      " Hey \n",
+      " Food \n",
+      " Marina submarine ⚓️ \n",
+      " 🍝 \n",
+      " Pizza pizza 🍕🍕 #2piesisntenough \n",
+      " 🍷❤️🍷❤️ \n",
+      " Because I love you and want you to eat \n",
+      " Oranges \n",
+      " 🏠 \n",
+      " 🙏🏾🙏🏾🙏🏾 \n",
+      " 🎉 \n",
+      " 🎧 \n",
+      " Basketball for Jesse \n",
+      " Dragon Breath 🐲 \n",
+      " Stress free 🐂 \n",
+      " Lolla \n",
+      " Cleaning your Pool \n",
+      " 🚗 \n",
+      " Burgas \n",
+      " paesanos 🍝🍕🍴 \n",
+      " 🚽 \n",
+      " TWC \n",
+      " ZJ \n",
+      " 🍺 \n",
+      " 🤘🏻 \n",
+      " 🎬 \n",
+      " 🍕 \n",
+      " ☕️🍴 \n",
+      " Bus/Blenheim and Vaseline \n",
+      " Praha \n",
+      " 🇨🇦🇨🇦🇨🇦🇨🇦 \n",
+      " Mendocino \n",
+      " Comcast -PGE \n",
+      " 👕 \n",
+      " 🖕🏿 \n",
+      " Good stuff \n",
+      " Old couch \n",
+      " 🍷🧀🚂 \n",
+      " 🍻 \n",
+      " 🏒🏒🏒🏒 \n",
+      " Billz \n",
+      " Karate ✋ \n",
+      " Bruno \n",
+      " Exchange cover \n",
+      " 😘😘 \n",
+      " 🙌🏻 \n",
+      " Bambi's bachelorette 💍 \n",
+      " 🍕🍕🍕 \n",
+      " Energy \n",
+      " Ace \n",
+      " CHANGE CLOTHES \n",
+      " 🍻 \n",
+      " 🎫 \n",
+      " 🍹 \n",
+      " GeogProg \n",
+      " 🍾💩 \n",
+      " Party time!!! \n",
+      " 🤖💨 \n",
+      " Fantasy earnings \n",
+      " thanks bb \n",
+      " Bojiggles \n",
+      " ⛽ \n",
+      " Alpha \n",
+      " Chip in for Shrimp\n",
+      " pitchfork ticket \n",
+      " 😎 \n",
+      " 🍕🎉 👲 \n",
+      " 🏰✈️🗻🚂 \n",
+      " 🍤 \n",
+      " Food \n",
+      " refund \n",
+      " Boat day bbq \n",
+      " Batteries so we don't die from a 🔥 🚒 \n",
+      " 🍕 \n",
+      " 🍕 \n",
+      " 🍑 \n",
+      " 🍼 \n",
+      " For that thing you like. (Love\n",
+      " 📹 💒 \n",
+      " Uber \n",
+      " 🍻 \n",
+      " 🕋 \n",
+      " 🍗🍲 \n",
+      " 😷🚗 \n",
+      " 🍕 \n",
+      " Panthers \n",
+      " 🍕 \n",
+      " That good good \n",
+      " 🍻 \n",
+      " 🍕 \n",
+      " 👰🏽🎉😊 \n",
+      " What a baller \n",
+      " 🍔 \n",
+      " Nice job dude \n",
+      " Cause I love you \n",
+      " 📺🚨🕵 \n",
+      " Prezzies \n",
+      " Sister fees \n",
+      " Lol \n",
+      " Costco \n",
+      " Bottled blonde \n",
+      " ✊ \n",
+      " 🔥 \n",
+      " Uber \n",
+      " 🍷🍷🍷 \n",
+      " Hi Megan\n",
+      " Ride or die \n",
+      " Little jimmys \n",
+      " Chinese! \n",
+      " 🍴☕️ \n",
+      " 🌮🌮 \n",
+      " 💃🏻💃🏻 \n",
+      " 🍴 \n",
+      " Pillow 😄 \n",
+      " 💃🏽💅🏽💁🏽 \n",
+      " Rent \n",
+      " AB 😊 \n",
+      " Smokes \n",
+      " ❤️ \n",
+      " Visit again \n",
+      " 👍🏿 \n",
+      " Uber \n",
+      " ⚡🔌💡💸 \n",
+      " 🍌🍌🍌🍌 \n",
+      " Drank and Barbs \n",
+      " Milos \n",
+      " 🍔 \n",
+      " Brunch \n",
+      " 🌭🍑🍓🍐🍉🍅🍖🍢🍙🍕🌯 \n",
+      " 😘 \n",
+      " 🍼🍴🐙 \n",
+      " Bills \n",
+      " Breakfast date \n",
+      " Alch \n",
+      " 🍺 \n",
+      " Units \n",
+      " 🚘🚘🚘 \n",
+      " Drugs \n",
+      " ❤️ \n",
+      " VIP \n",
+      " Awesome chalk🎨 \n",
+      " Venmo \n",
+      " Candy \n",
+      " 🏠💸 \n",
+      " Bribe money \n",
+      " Maid \n",
+      " Uber home \n",
+      " A periodic table \n",
+      " Jlocc resort \n",
+      " Boba \n",
+      " Chures \n",
+      " Brunch carafe \n",
+      " Jame-O gingers with Serena W last night \n",
+      " 🌜 \n",
+      " Toes 🍹🍷🍻 \n",
+      " Drinks \n",
+      " ⚰ \n",
+      " B 💜 \n",
+      " ZJ \n",
+      " 🍔 \n",
+      " Tay \n",
+      " The cure \n",
+      " Bulling red \n",
+      " 🍪 🍎🍌🍊🍇 \n",
+      " The mile-Thanks! \n",
+      " Football \n",
+      " Our uber probably \n",
+      " Uberrrrrr 🔙 2 da crib \n",
+      " WAAMP Sleepover ❤️ \n",
+      " Wifi 10-28 \n",
+      " Eat 🍆🍆🍆🍆 \n",
+      " ❤️ \n",
+      " Came in clutch with the bus route!!! On my way to see this fool in Italy 🇮🇹 \n",
+      " Coldplay babay \n",
+      " Fud \n",
+      " Lola \n",
+      " Thanks :) \n",
+      " 🍕 \n",
+      " 🎱 \n",
+      " Alimony \n",
+      " Lisa's debt \n",
+      " John smith \n",
+      " 🍗🍖✨ \n",
+      " 😀 \n",
+      " 🍷🍤 \n",
+      " cable \n",
+      " 🎉🎉🎉 \n",
+      " Kalah taroan \n",
+      " Bb \n",
+      " 🍳☕ \n",
+      " Internet \n",
+      " Buckets \n",
+      " Thank you never carry 💵 \n",
+      " 🎰 \n",
+      " Open champ \n",
+      " No means no \n",
+      " Groceries 🐓 \n",
+      " Food \n",
+      " 💕 \n",
+      " 🚕🚕🚕🚕 \n",
+      " 🍔 \n",
+      " Lack of golfing ability \n",
+      " Comcast $$ \n",
+      " That bastard better have my jack waiting for me 😂. GBH \n",
+      " I rented a movie on your Amazon prime \n",
+      " Thanksss \n",
+      " Blankie! \n",
+      " Pokeballs (peppinos) \n",
+      " 💌 \n",
+      " 🍳☕ \n",
+      " Platters \n",
+      " 🍜🍙 \n",
+      " hah \n",
+      " Hair of the dawg 🙃 \n",
+      " Hkb \n",
+      " LINDSEY STERLING!🎵🎶🎻 \n",
+      " BurgZ \n",
+      " Grocers \n",
+      " ⚾️ \n",
+      " Vikings game. \n",
+      " Tito's 🍸 \n",
+      " Uber \n",
+      " 🍵🍞🏈 \n",
+      " Whoops two months of time warner 🙈 + shower curtain \n",
+      " 🚗 \n",
+      " ⛳ # \n",
+      " Chicken tenders \n",
+      " 🍷 \n",
+      " Africa \n",
+      " . \n",
+      " Amazon \n",
+      " Mango tango \n",
+      " ⛽ \n",
+      " Fun \n",
+      " Mexicanos \n",
+      " Uber \n",
+      " 🍩 \n",
+      " drugs \n",
+      " ❤️👍🏻🍷🌞😜🤓💃🏻💃🏻🐺🐥🦁🐊🐫 \n",
+      " Bag + book \n",
+      " We got witty with it \n",
+      " Still proud of Phil \n",
+      " Eggs \n",
+      " I don't want your filthy money. \n",
+      " 💃 \n",
+      " 🍳🍹 \n",
+      " Keg \n",
+      " 🐐 \n",
+      " Amy Schumer 🎫 \n",
+      " $$ July \n",
+      " for uber \n",
+      " Beer gifts Sectionals. \n",
+      " 👹 \n",
+      " Shoes \n",
+      " Don't decline this one \n",
+      " 🧀🍷❌ \n",
+      " 🍃 \n",
+      " Food \n",
+      " Shooting ⭐ \n",
+      " Being a spy \n",
+      " ⛽ \n",
+      " 🍻 \n",
+      " 🍔 \n",
+      " Best hat \n",
+      " Bye y'all \n",
+      " Brownie and shirt skeet skeet \n",
+      " 4loko \n",
+      " 🎉 \n",
+      " Booze! \n",
+      " 🎤😎 \n",
+      " 🏨 🏩 \n",
+      " Yeeeeee \n",
+      " 👾 \n",
+      " 🚕 \n",
+      " Curtains! \n",
+      " 🐟🐟 \n",
+      " Cat sweater 😺 \n",
+      " 🍕 \n",
+      " Excited for you guys! \n",
+      " Human 🏧 \n",
+      " Ticonderoga 30 pack \n",
+      " 😉 \n",
+      " Graphic design \n",
+      " Because apparently I don't buy my own food anymore. \n",
+      " Room \n",
+      " Jackets and material \n",
+      " 🍸 \n",
+      " Flamingling 💃🏼💃🏼💃🏼 \n",
+      " Any port in a storm \n",
+      " That doorknob \n",
+      " Lyft 2 the banks 💃🏼💃🏻 \n",
+      " 💸 \n",
+      " 🍧 \n",
+      " 🇺🇸 \n",
+      " Sjjshsjsbsb \n",
+      " Fooooood \n",
+      " Uber \n",
+      " Train \n",
+      " Zaaaaaa \n",
+      " 🎩 \n",
+      " ⚡️💡🔌 \n",
+      " Munchies \n",
+      " PricewaterhouseCoopers \n",
+      " Pizza 🍕 \n",
+      " Amoraaaaaa \n",
+      " 🍕 \n",
+      " Rent \n",
+      " Satan \n",
+      " Booz 🍳🍹 \n",
+      " 🍴 \n",
+      " Mulaney \n",
+      " 🅿 \n",
+      " 🅿 and evening out my venmo balance \n",
+      " box \n",
+      " ⚽️⛳️ \n",
+      " 😈 \n",
+      " Brew 🌆 \n",
+      " Slaves \n",
+      " DTE \n",
+      " Spacious lyft \n",
+      " I pissed myself last night \n",
+      " For ur parents \n",
+      " Broom\n",
+      " 🍷 \n",
+      " 🍕 \n",
+      " Bigggg 🐻 \n",
+      " 🍳🌯🍅🍾⚾️🎟 \n",
+      " 🏌 \n",
+      " 🍸🍷 \n",
+      " Wakeboardddd 🏄🏻 \n",
+      " 哭慘了 \n",
+      " Uber to airport in Portland \n",
+      " A cup full of love and kindness \n",
+      " 🐷🐣🍳🧀 \n",
+      " Gas and tacos! \n",
+      " 🐺 \n",
+      " 🚙 \n",
+      " Just because I miss you ❤️ \n",
+      " Tea \n",
+      " 🔥🔥🔥 \n",
+      " Baby feel better soon. \n",
+      " Bologna \n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(test_path) as csvfile:\n",
+    "    reader = csv.DictReader(csvfile)\n",
+    "    for row in reader:\n",
+    "        print(row[' message'])        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "I/O operation on closed file.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-89-31a0134c2113>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mreader\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m//anaconda/lib/python3.5/csv.py\u001b[0m in \u001b[0;36m__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    108\u001b[0m             \u001b[0;31m# Used only for its side effect.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    109\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfieldnames\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 110\u001b[0;31m         \u001b[0mrow\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreader\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    111\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mline_num\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mline_num\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    112\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: I/O operation on closed file."
+     ]
+    }
+   ],
+   "source": [
+    "for row in reader:\n",
+    "    print(row.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "batch = pd.read_csv(batch_path,nrows=225)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>id1</th>\n",
+       "      <th>id2</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>message</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>220</th>\n",
+       "      <td>2016-11-02 09:38:53</td>\n",
+       "      <td>19633</td>\n",
+       "      <td>2517</td>\n",
+       "      <td>28.24</td>\n",
+       "      <td>Fantasy earnings</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>221</th>\n",
+       "      <td>2016-11-02 09:38:53</td>\n",
+       "      <td>52398</td>\n",
+       "      <td>8580</td>\n",
+       "      <td>1.26</td>\n",
+       "      <td>thanks bb</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>222</th>\n",
+       "      <td>2016-11-02 09:38:53</td>\n",
+       "      <td>26714</td>\n",
+       "      <td>15402</td>\n",
+       "      <td>14.25</td>\n",
+       "      <td>Bojiggles</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>223</th>\n",
+       "      <td>2016-11-02 09:38:53</td>\n",
+       "      <td>65377</td>\n",
+       "      <td>19063</td>\n",
+       "      <td>24.47</td>\n",
+       "      <td>⛽</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>224</th>\n",
+       "      <td>2016-11-02 09:38:53</td>\n",
+       "      <td>37357</td>\n",
+       "      <td>3376</td>\n",
+       "      <td>8.96</td>\n",
+       "      <td>Alpha</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    time    id1    id2   amount             message\n",
+       "220  2016-11-02 09:38:53  19633   2517    28.24   Fantasy earnings \n",
+       "221  2016-11-02 09:38:53  52398   8580     1.26          thanks bb \n",
+       "222  2016-11-02 09:38:53  26714  15402    14.25          Bojiggles \n",
+       "223  2016-11-02 09:38:53  65377  19063    24.47                  ⛽ \n",
+       "224  2016-11-02 09:38:53  37357   3376     8.96              Alpha "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batch.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
