last day working on digital wallet challenge

--- a/network_final.ipynb
+++ b/network_final.ipynb
@@ -27,6 +27,7 @@
    },
    "outputs": [],
    "source": [
+    "## Paths to data files\n",
     "input_dir = 'paymo_input/'\n",
     "batch_file = 'batch_payment.csv'\n",
     "stream_file = 'stream_payment.csv'\n",
@@ -48,12 +49,67 @@
     "## first hurdle - PayMo messages can include commas, and therefore using pandas csv_read fails due to inconsistent number of columns.\n",
     "## current compromise is to use DictReader instead, which truncates Message at first comma\n",
     "## best solution likely involves regular expressions, but not analyzing messages for the time being anyway\n",
-    "with open(test_path) as csvfile:\n",
+    "\n",
+    "#takes about 30 seconds to load the 3 million lines each of batch_payment and stream_payment on my macbook pro.\n",
+    "\n",
+    "batch_dict = {}\n",
+    "batch_dict['time'] = {}\n",
+    "batch_dict['id1'] = {}\n",
+    "batch_dict['id2'] = {}\n",
+    "batch_dict['amount'] = {}\n",
+    "batch_dict['message'] = {}\n",
+    "\n",
+    "with open(batch_path) as csvfile:\n",
     "    reader = csv.DictReader(csvfile)\n",
-    "    for row in reader:\n",
-    "        print(row[' message'])        \n",
+    "    for i, row in enumerate(reader):\n",
+    "        batch_dict['time'][i] = row['time']\n",
+    "        batch_dict['id1'][i] = row[' id1']\n",
+    "        batch_dict['id2'][i] = row[' id2']\n",
+    "        batch_dict['amount'][i] = row[' amount']\n",
+    "        batch_dict['message'][i] = row[' message']\n",
     "        \n",
-    "## takes about 20 seconds each to load batch_payment.csv and stream_payment.csv"
+    "df_batch = pd.DataFrame.from_dict(batch_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## repeat the above - load in data from stream_payment and turn into pandas dataframe.\n",
+    "stream_dict = {}\n",
+    "stream_dict['time'] = {}\n",
+    "stream_dict['id1'] = {}\n",
+    "stream_dict['id2'] = {}\n",
+    "stream_dict['amount'] = {}\n",
+    "stream_dict['message'] = {}\n",
+    "\n",
+    "with open(stream_path) as csvfile:\n",
+    "    reader = csv.DictReader(csvfile)\n",
+    "    for i, row in enumerate(reader):\n",
+    "        stream_dict['time'][i] = row['time']\n",
+    "        stream_dict['id1'][i] = row[' id1']\n",
+    "        stream_dict['id2'][i] = row[' id2']\n",
+    "        stream_dict['amount'][i] = row[' amount']\n",
+    "        stream_dict['message'][i] = row[' message']\n",
+    "        \n",
+    "df_stream = pd.DataFrame.from_dict(stream_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#dictionary columns are randomly ordered - reorder as expected\n",
+    "df_batch = df_batch[['time','id1','id2','amount','message']]\n",
+    "df_stream = df_stream[['time','id1','id2','amount','message']]"
    ]
   }
  ],
