now have full list of partners for each user.

--- a/network_final.ipynb
+++ b/network_final.ipynb
@@ -111,6 +111,94 @@
     "df_batch = df_batch[['time','id1','id2','amount','message']]\n",
     "df_stream = df_stream[['time','id1','id2','amount','message']]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#for convenience, let's call the id1 users 'givers' and id2 users 'receivers'\n",
+    "#strategy is to use the pandas groupby command to obtain list of all partners in transactions where <user_id> is giver\n",
+    "#repeat for transactions where <user_id> is receiver, then combine into single list\n",
+    "givers = df_batch.groupby('id1')\n",
+    "receivers = df_batch.groupby('id2')\n",
+    "partners_1 = {}\n",
+    "partners_2 = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## find all transactions where user <user_id> was giver, then find list of partners in those transactions\n",
+    "for user_id,transactions in givers:\n",
+    "    \n",
+    "    #store list of all transaction partners as numpy array\n",
+    "    try:\n",
+    "        partners_1[int(user_id)] = np.array(givers.get_group(user_id)['id2'].astype(int))\n",
+    "   \n",
+    "    #some lines of batch_payment.txt and stream_payment.txt are off - omit malformed entries\n",
+    "    except (KeyError, ValueError) as BadLine:\n",
+    "        print(\"Skipping invalid key:\",user_id)\n",
+    "    \n",
+    "## same as before for all transactions where <user_id> was receiver\n",
+    "for user_id,transactions in receivers:\n",
+    "    \n",
+    "    #store list of all transaction partners as numpy array\n",
+    "    try: \n",
+    "        partners_2[int(user_id)] = np.array(givers.get_group(user_id)['id1'].astype(int))\n",
+    "        \n",
+    "    #some lines of batch_payment.txt and stream_payment.txt are off - omit malformed entries\n",
+    "    except (KeyError, ValueError) as BadLine:\n",
+    "        print(\"Skipping invalid key:\",user_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## it's possible that some users only show up as givers and others only as receivers - combine to master list of all IDs\n",
+    "## in actuality for the provided batch_payment.txt all users show up as givers at least once, but not safe to assume\n",
+    "user_list_1 = np.array(list(partners_1.keys()))\n",
+    "user_list_2 = np.array(list(partners_2.keys()))\n",
+    "user_list = np.unique(np.concatenate([user_list_1,user_list_2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "partners = {}\n",
+    "\n",
+    "#cycle through all users and agglomerate partners from all transactions\n",
+    "for user_id in user_list:\n",
+    "    \n",
+    "    pp = []\n",
+    "    \n",
+    "    if user_id in partners_1.keys():\n",
+    "        pp += partners_1[user_id]\n",
+    "        \n",
+    "    if user_id in partners_2.keys():\n",
+    "        pp += partners_2[user_id]\n",
+    "        \n",
+    "    #reduce to (sorted) list of all unique partners\n",
+    "    partners[user_id] = np.unique(pp)"
+   ]
   }
  ],
  "metadata": {
